adds inkscape.